--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,9 +1,24 @@
 $color-dark1: #525162;
+$color-dark1-up: #575762;
+$color-dark1-down: #4d4b64;
+
+
 $color-dark2: #394f57;
+$color-dark2-up: #47555d;
+$color-dark2-down: #2a4e59;
+
+
 $color-dark3: #446668;
 $color-dark4: #749593;
 
 $color-light1: #b9cbc9;
 $color-light2: #ffffff;
+
 $color-light3: #fd9978;
+$color-light3-up: #ffc0ab;
+$color-light3-down: #ff784b;
+
 $color-light4: #fec837;
+$color-light4-up: #ffda91;
+$color-light4-down: #ffbf00;
+$color-light4-back: #a6833b;
