--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,10 +1,10 @@
 @import "../styles/animates";
-
+@import '../styles/colors';
 .App {
   animation: Background 10s ease-in-out infinite;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(120deg, #d02e2e, #26d7d1, #8026d7);
+  background-color: $color-dark1;
   background-size: 500% 500%;
   display: flex;
   flex-direction: column;
@@ -12,6 +12,7 @@
   align-items: center;
 
   .body {
+    border-radius: 1px;
     min-height: 100px;
     position: relative;
     padding: 2.5rem 5rem;
@@ -20,8 +21,11 @@
     align-items: center;
     justify-content: flex-start;
     width: 700px;
-    background: rgba(0, 0, 0, 0.4);
-    border-radius: 25px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-color: $color-dark2;
+    border-top: 3px solid $color-dark4;
+    border-left: 3px solid $color-dark4;
+    border-bottom: 5px inset $color-dark3;
+    border-right: 5px inset $color-dark3;
+    //box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 }
