--- a/src/components/AboutButton/AboutButton.module.scss
+++ b/src/components/AboutButton/AboutButton.module.scss
@@ -1,38 +1,22 @@
+@import "src/styles/colors";
 .about {
   right: 0;
   top: 0;
-  margin: 1rem 1rem;
+}
+
+.description {
+  user-select: none;
+  width: 500px;
   position: absolute;
-  padding: .8rem;
-  border: 1px solid black;
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  transition: all .2s ease;
-  &:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-
-    .description {
-      display: block;
-    }
-  }
-
-  .description {
-    width: 500px;
-    transition: all 0.3s;
-    animation: AboutBlock .2s ease-in-out;
-    padding: 1rem;
-    background-color: white;
-    border-radius: 5px;
-    z-index: 11;
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 110%;
-    font-size: .9rem;
-    font-family: Arial, sans-serif;
-    text-align: left;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-
-
+  transition: all 0.3s;
+  animation: AboutBlock .2s ease-in-out;
+  padding: 1rem;
+  background-color: $color-light1;
+  z-index: 13;
+  right: 1rem;
+  bottom: 1rem;
+  font-size: .9rem;
+  font-family: Arial, sans-serif;
+  text-align: left;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
