--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -23,9 +23,9 @@
 }
 
 .title {
-  font-family: 'Nunito', sans-serif;
   text-transform: uppercase;
   font-size: 30px;
-  font-weight: bold;
   letter-spacing: 3px;
+  color: white;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.8);
 }
