--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -1,50 +1,58 @@
+@import "src/styles/colors";
 .item {
-  height: 200px;
-  border: 1px solid black ;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  height: 230px;
+  border-top: 2px solid $color-dark2-up;
+  border-left: 2px solid $color-dark2-up;
+  border-right: 4px inset $color-dark2-down;
+  border-bottom: 4px inset $color-dark2-down;
+  background-color: $color-dark3;
+  //box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   transition: all 0.3s;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
   padding: 1rem;
+  color: white;
 
   &:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
-    transform: scale(1.05);
+    box-shadow: 3px 3px 1px rgba(0, 0, 0, .3);
+    transform: translate(-2px, -2px);
   }
 }
 
 .buttons {
   display: flex;
 
+  a {
+    text-decoration: none;
+  }
+
   button {
-    padding: .3rem 1rem;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.1);
-    transition: all 0.2s;
-    font-size: 16px;
-    font-family: Nanito, sans-serif;
+    position: initial;
+    margin: 0;
+    background-color: $color-dark1;
+    border-top: 2px solid $color-dark1-up;
+    border-left: 2px solid $color-dark1-up;
+    border-right: 3px inset $color-dark1-down;
+    border-bottom: 3px inset $color-dark1-down;
     &:hover {
-      background-color: rgba(165, 42, 42, 0.5);
-      box-shadow: 0 0 10px brown;
-      border: 1px solid brown;
+      border-top: 2px solid $color-dark1-up;
+      border-left: 2px solid $color-dark1-up;
+      border-right: 3px inset $color-dark1-down;
+      border-bottom: 3px inset $color-dark1-down;
     }
   }
 }
 
 .item_head {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   letter-spacing: 3px;
-  font-family: 'Nunito', serif;
+  text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.6);
 }
 
 .item_description {
   font-size: 14px;
   font-weight: normal;
   letter-spacing: 1px;
-  font-family: 'Nunito', serif;
 }
