--- a/src/components/ProgressBar/Progress.module.scss
+++ b/src/components/ProgressBar/Progress.module.scss
@@ -1,4 +1,7 @@
+@import "src/styles/colors";
+
 .progressBar {
+  transition: all 0.3s;
   user-select: none;
   overflow: hidden;
   display: flex;
@@ -6,24 +9,26 @@
   margin: .5rem 0;
   width: 100%;
   height: 30px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 5px;
-  border: 1px solid black;
+  background-color: $color-light4-back;
+  border-top: 3px solid $color-light4-up;
+  border-left: 3px solid $color-light4-up;
+  border-right: 4px inset $color-light4-down;
+  border-bottom: 4px inset $color-light4-down;
 
   .progress {
+    transition: all 0.3s;
     border-right: 1px solid black;
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    background-color: rgba(159, 82, 252, 0.8);
-    //border-radius: inherit;
+    background-color: $color-light4;
   }
 
   .value {
     z-index: 10;
     font-family: Calibri, serif;
-    font-size: 1.5em;
+    font-size: 1em;
     position: absolute;
     left: 1rem;
     top: 0;
@@ -34,7 +39,7 @@
   .max {
     z-index: 10;
     font-family: Calibri, serif;
-    font-size: 1.5em;
+    font-size: 1em;
     position: absolute;
     right: 1rem;
     top: 0;
