--- a/src/pages/FullQuiz/FullQuiz.module.scss
+++ b/src/pages/FullQuiz/FullQuiz.module.scss
@@ -11,6 +11,8 @@
 }
 
 .title {
+  color: white;
+  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.8);
   font-size: 2rem;
   font-weight: normal;
   font-family: Nunito, sans-serif;
