--- a/src/styles/animates.scss
+++ b/src/styles/animates.scss
@@ -17,19 +17,19 @@ $color4: plum;
 
 @keyframes HeadColor {
   0% {
-    text-shadow: 0 0 10px black;
+    text-shadow: 0 0 1px black;
   }
   25% {
-    text-shadow: 0 0 10px $color1;
+    text-shadow: 3px 3px 5px $color1;
   }
   50% {
-    text-shadow: 0 0 10px $color2;
+    text-shadow: 3px 3px 5px $color2;
   }
   75% {
-    text-shadow: 0 0 10px $color3;
+    text-shadow: 3px 3px 5px $color3;
   }
   100% {
-    text-shadow: 0 0 10px black;
+    text-shadow: 0 0 1px black;
   }
 }
 
