--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 $color-dark1: #525162;
-$color-dark1-up: #575762;
+$color-dark1-up: #5b5b62;
 $color-dark1-down: #4d4b64;
 
 
@@ -22,3 +22,11 @@ $color-light4: #fec837;
 $color-light4-up: #ffda91;
 $color-light4-down: #ffbf00;
 $color-light4-back: #a6833b;
+
+$color-success: rgb(180, 227, 115);
+$color-success-up: rgb(217, 255, 163);
+$color-success-down: rgb(192, 255, 94);
+
+$color-error: rgb(255, 54, 54);
+$color-error-up: rgb(255, 72, 72);
+$color-error-down: rgb(255, 48, 48);
