--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,31 +1,34 @@
 @import "../styles/animates";
 @import '../styles/colors';
+
 .App {
+  position: relative;
   animation: Background 10s ease-in-out infinite;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: $color-dark1;
   background-size: 500% 500%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
 
-  .body {
-    border-radius: 1px;
-    min-height: 100px;
-    position: relative;
-    padding: 2.5rem 5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    width: 700px;
-    background-color: $color-dark2;
-    border-top: 3px solid $color-dark4;
-    border-left: 3px solid $color-dark4;
-    border-bottom: 5px inset $color-dark3;
-    border-right: 5px inset $color-dark3;
-    //box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
+.body {
+  z-index: 1;
+  box-shadow: 0 0 3px black;
+  border-radius: 1px;
+  min-height: 100px;
+  position: relative;
+  padding: 4rem 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 700px;
+  background-color: $color-dark2;
+  border-top: 3px solid $color-dark4;
+  border-left: 3px solid $color-dark4;
+  border-bottom: 5px inset $color-dark3;
+  border-right: 5px inset $color-dark3;
 }
