--- a/src/components/Answer/Answer.module.scss
+++ b/src/components/Answer/Answer.module.scss
@@ -1,45 +1,62 @@
+@import "src/styles/colors";
 .answer {
+  background-color: $color-dark1;
+  border-top: 2px solid $color-dark1-up;
+  border-left: 2px solid $color-dark1-up;
+  border-right: 3px inset $color-dark1-down;
+  border-bottom: 3px inset $color-dark1-down;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   width: 100%;
-  border: 2px solid mistyrose;
-  background-color: rgba(255, 255, 255, 0.1);
-  //padding: .5rem;
   margin: .5rem 0;
   user-select: none;
   cursor: pointer;
-  transition: all 0.3s;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
+  transition: all 0.2s;
+  //box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   &:hover {
-    transform: translateY(-1px);
+    $color: #393844;
+    border-top: 2px solid $color;
+    border-left: 2px solid $color;
+    border-right: 3px inset $color;
+    border-bottom: 3px inset $color;
+    transform: translate(-2px, -1px);
+    box-shadow: 2px 3px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  &:active {
+    transform: translate(0,0);
+    box-shadow: 2px 3px 1px rgba(0, 0, 0, 0);
   }
 }
 
 .text {
-  padding: .5rem;
+  display: flex;
+  color: white;
+  padding: .5rem 1rem;
   height: 100%;
-  font-family: Nunito, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  text-shadow: 2px 1px 1px black;
+  align-items: center;
+
+}
+
+.title {
+  margin-left: 1rem;
+}
+
+.index {
+  font-size: .5rem;
 }
 
 .correct {
+  margin-right: .2rem;
   width: 40px;
   display: none;
   justify-content: center;
   align-items: center;
-  border-left: 2px solid mistyrose;
 }
 
 .show {
   display: flex;
-}
-
-.correct {
-  background-color: rgba(152, 255, 0, 0.2);
-}
-
-.wrong {
-  background-color: rgba(208, 46, 46, 0.2);
 }
