--- a/src/components/CorrectStatus/CorrectStatus.module.scss
+++ b/src/components/CorrectStatus/CorrectStatus.module.scss
@@ -1,3 +1,5 @@
+@import "src/styles/colors";
+
 .status {
   width: 100%;
   height: 100%;
@@ -6,16 +8,31 @@
   align-items: center;
 
   svg {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     padding: 1px;
+    fill: white;
   }
 }
 
 .correct {
-  background-color: rgba(154, 255, 0, 0.5);
+  height: 80%;
+  background-color: $color-success;
+  border-top: 3px inset $color-success-down;
+  border-left: 3px inset $color-success-down;
+  border-right: 4px inset $color-success-up;
+  border-bottom: 4px inset $color-success-up;
 }
 
 .wrong {
-  background-color: rgba(255, 0, 0, 0.5);
+  height: 80%;
+  background-color: $color-error;
+  border-top: 3px inset $color-error-down;
+  border-left: 3px inset $color-error-down;
+  border-right: 4px inset $color-error-up;
+  border-bottom: 4px inset $color-error-up;
+}
+
+.correct, .wrong {
+  //margin-right: 1rem;
 }
