--- a/src/components/ProgressBar/Progress.module.scss
+++ b/src/components/ProgressBar/Progress.module.scss
@@ -9,6 +9,7 @@
   margin: .5rem 0;
   width: 100%;
   height: 30px;
+  box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.7);
   background-color: $color-light4-back;
   border-top: 3px solid $color-light4-up;
   border-left: 3px solid $color-light4-up;
@@ -16,8 +17,9 @@
   border-bottom: 4px inset $color-light4-down;
 
   .progress {
+    border-right: 4px inset $color-light4-down;
     transition: all 0.3s;
-    border-right: 1px solid black;
+    //border-right: 1px solid black;
     position: absolute;
     top: 0;
     left: 0;
