--- a/src/components/Quest/Quest.module.scss
+++ b/src/components/Quest/Quest.module.scss
@@ -1,10 +1,21 @@
 .quest {
   width: 100%;
-  padding: 0.5em 0;
+  padding: 1rem 0 0 0;
 }
 
 .title {
-  font-family: Nunito, sans-serif;
   text-transform: uppercase;
   font-size: 1.5em;
+  color: white;
+  text-shadow: 2px 1px 1px black;
+}
+
+.description {
+  font-size: 1.1em;
+  color: white;
+  text-shadow: 2px 1px 1px black;
+}
+
+.answers {
+  margin: 3rem 0 0 0;
 }
