--- a/src/styles/animates.scss
+++ b/src/styles/animates.scss
@@ -42,3 +42,26 @@ $color4: plum;
     opacity: 1;
   }
 }
+
+@keyframes backAnim {
+  0% {
+    transform: rotate(0deg) translateX(0);
+    opacity: 0;
+    bottom: 0;
+  }
+  10% {
+  transform: translateX(5px);
+    opacity: 1;
+  }
+  50% {
+    transform: rotate(180deg) translateX(35px);
+    bottom: 110%;
+  }
+  70% {
+    transform: translateX(10px);
+  }
+  100% {
+    bottom: 0;
+    transform: rotate(360deg) translateX(-20px);
+  }
+}
