--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -21,11 +21,17 @@
   min-height: 100px;
   position: relative;
   padding: 4rem 5rem;
+  @media (max-width: 600px) {
+    padding: 4rem 3rem;
+  }
+  @media (max-width: 400px) {
+    padding: 4rem 2rem;
+  }
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 700px;
+  width: 70%;
   background-color: $color-dark2;
   border-top: 3px solid $color-dark4;
   border-left: 3px solid $color-dark4;
