--- a/src/components/AboutButton/AboutButton.module.scss
+++ b/src/components/AboutButton/AboutButton.module.scss
@@ -19,4 +19,9 @@
   font-family: Arial, sans-serif;
   text-align: left;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+  hr {
+    margin: .5rem 0;
+  }
 }
+
