--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -11,6 +11,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+
+  @media (max-width: 900px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (max-width: 560px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   &::-webkit-scrollbar {
     width: 5px;
     background-color: rgba(0, 0, 0, 0.5);
