--- a/src/pages/CompletePage/CompletePage.module.scss
+++ b/src/pages/CompletePage/CompletePage.module.scss
@@ -18,6 +18,21 @@
   font-size: 4rem;
 }
 
+@media (max-width: 600px) {
+  .text {
+    font-size: 1rem;
+  }
+
+  .count {
+    font-size: 2.5rem;
+  }
+
+  .image img{
+    width: 150px;
+    height: 150px;
+  }
+}
+
 .image {
   margin: .5rem;
 }
