--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -12,6 +12,10 @@ $color-dark3: #446668;
 $color-dark4: #749593;
 
 $color-light1: #b9cbc9;
+$color-light1-up: #e3e3e3;
+$color-light1-down: #8db2ae;
+
+
 $color-light2: #ffffff;
 
 $color-light3: #fd9978;
