--- a/src/pages/Create/Create.module.scss
+++ b/src/pages/Create/Create.module.scss
@@ -1,6 +1,16 @@
+@import "src/styles/colors";
 .create {
   position: relative;
   width: 100%;
+}
+$mb-inputs: .3rem;
+input {
+  margin-bottom: $mb-inputs;
+  background-color: $color-light1;
+  border-top: 3px solid $color-light1-up;
+  border-left: 3px solid $color-light1-up;
+  border-right: 4px inset $color-light1-down;
+  border-bottom: 4px inset $color-light1-down;
 }
 
 .head {
@@ -21,9 +31,6 @@
   input[type="text"] {
     outline: none;
     padding: .3rem 1rem;
-    width: 100%;
-    width: -moz-available;          /* WebKit-based browsers will ignore this. */
-    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
     width: fill-available;
   }
 }
@@ -44,9 +51,6 @@
   input[type="text"] {
     outline: none;
     padding: .3rem 1rem;
-    width: 100%;
-    width: -moz-available;          /* WebKit-based browsers will ignore this. */
-    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
     width: fill-available;
   }
 }
@@ -75,14 +79,13 @@ label {
 }
 
 .answerInputs {
+  margin-bottom: $mb-inputs;
   position: relative;
 
   input[type="text"] {
+    margin-bottom: 0;
     outline: none;
     padding: .3rem 1rem;
-    width: 100%;
-    width: -moz-available;          /* WebKit-based browsers will ignore this. */
-    width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
     width: fill-available;
   }
   label {
