--- a/src/pages/FullQuiz/FullQuiz.module.scss
+++ b/src/pages/FullQuiz/FullQuiz.module.scss
@@ -11,6 +11,7 @@
 }
 
 .title {
+  position: relative;
   word-break: break-word;
   color: white;
   text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.8);
@@ -21,10 +22,23 @@
   @media (max-width: 600px) {
     font-size: 1.5rem;
   }
+  &::before {
+    position: absolute;
+    top: -5px;
+    left: 0;
+    text-shadow: none;
+    font-size: 12px;
+    opacity: .8;
+    content: 'Название';
+  }
 }
 
 .body {
   display: flex;
   width: 100%;
   justify-content: flex-start;
+}
+
+h2 {
+  color: white;
 }
