--- a/src/pages/MainMenu/MainMenu.module.scss
+++ b/src/pages/MainMenu/MainMenu.module.scss
@@ -3,6 +3,7 @@
 .head {
   font-family: "Nunito", sans-serif;
   font-size: 6.25rem;
+  margin-bottom: 1rem;
   @media (max-width: 600px) {
     font-size: 3.5rem;
     margin-bottom: 1rem;
@@ -18,6 +19,7 @@
 }
 
 .menu_elem {
+  user-select: none;
   color: white;
   text-decoration: none;
   border-top: 2px solid $color-light1;
@@ -32,6 +34,7 @@
   font-family: "Nunito", sans-serif;
   text-transform: uppercase;
   padding: 1rem 10rem;
+  text-align: center;
   @media (max-width: 600px) {
     padding: 1rem 3rem;
   }
@@ -74,15 +77,15 @@
     border-bottom: 3px inset $color2;
     border-right: 3px inset $color2;
   }
+  //&:nth-child(3):hover {
+  //  background: rgba(0, 0, 0, 0.5);
+  //  color: $color3;
+  //  border-top: 2px solid $color3;
+  //  border-left: 2px solid $color3;
+  //  border-bottom: 3px inset $color3;
+  //  border-right: 3px inset $color3;
+  //}
   &:nth-child(3):hover {
-    background: rgba(0, 0, 0, 0.5);
-    color: $color3;
-    border-top: 2px solid $color3;
-    border-left: 2px solid $color3;
-    border-bottom: 3px inset $color3;
-    border-right: 3px inset $color3;
-  }
-  &:nth-child(4):hover {
     background: rgba(0, 0, 0, 0.5);
     color: $color4;
     border-top: 2px solid $color4;
