--- a/src/pages/FullQuiz/FullQuiz.module.scss
+++ b/src/pages/FullQuiz/FullQuiz.module.scss
@@ -1,11 +1,13 @@
 @import "src/styles/animates";
 
 .FullQuiz {
+  z-index: 2;
   margin-top: 2rem;
   width: 100%;
 }
 
 .head {
+  z-index: 2;
   position: relative;
   display: flex;
 }
