--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -19,6 +19,7 @@
   box-shadow: 0 0 3px black;
   border-radius: 1px;
   min-height: 100px;
+  max-height: 90vh;
   position: relative;
   padding: 4rem 5rem;
   @media (max-width: 600px) {
@@ -31,7 +32,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 70%;
+  width: 90%;
   background-color: $color-dark2;
   border-top: 3px solid $color-dark4;
   border-left: 3px solid $color-dark4;
