--- a/src/pages/CompletePage/CompletePage.module.scss
+++ b/src/pages/CompletePage/CompletePage.module.scss
@@ -18,9 +18,15 @@
   font-size: 4rem;
 }
 
-@media (max-width: 600px) {
+.info {
+  a {
+    text-decoration: none;
+  }
+}
+
+@media (max-width: 650px) {
   .text {
-    font-size: 1rem;
+    font-size: 1rem!important;
   }
 
   .count {
@@ -30,6 +36,12 @@
   .image img{
     width: 150px;
     height: 150px;
+  }
+
+  .info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
