--- a/src/pages/Help/Help.module.scss
+++ b/src/pages/Help/Help.module.scss
@@ -1,18 +1,19 @@
 @import "src/styles/colors";
 
 .form_block {
+  z-index: 2;
   margin-top: 1rem;
   width: 100%;
 }
 
 .form {
   margin: 0 auto;
-  width: max-content;
+  width: 80%;
 
   .inputEmail {
     input {
       padding: .3rem;
-      width: 230px;
+      width: 100%;
       transition-duration: .2s;
       box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
       color: white;
@@ -42,7 +43,7 @@
       border-right: 4px inset $color-dark1-down;
       border-bottom: 4px inset $color-dark1-down;
       padding: .3rem;
-      width: 300px;
+      width: 100%;
       max-width: 700px;
       transition-duration: .2s;
       box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
