--- a/src/pages/Help/Help.module.scss
+++ b/src/pages/Help/Help.module.scss
@@ -44,7 +44,7 @@
       border-bottom: 4px inset $color-dark1-down;
       padding: .3rem;
       width: 100%;
-      max-width: 700px;
+      max-width: 100%;
       transition-duration: .2s;
       box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 
