--- a/src/pages/Help/Help.module.scss
+++ b/src/pages/Help/Help.module.scss
@@ -45,6 +45,7 @@
       padding: .3rem;
       width: 100%;
       max-width: 100%;
+      max-height: 500px;
       transition-duration: .2s;
       box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
 
