--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -2,16 +2,17 @@
 @import '../styles/colors';
 
 .App {
-  position: relative;
+  //position: relative;
   animation: Background 10s ease-in-out infinite;
   width: 100%;
-  min-height: 100vh;
-  background-color: $color-dark1;
+
+  //background-color: $color-dark1;
   background-size: 500% 500%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
 }
 
 .body {
@@ -19,14 +20,19 @@
   box-shadow: 0 0 3px black;
   border-radius: 1px;
   min-height: 100px;
-  max-height: 90vh;
+  //max-height: 90vh;
   position: relative;
-  padding: 4rem 5rem;
-  @media (max-width: 600px) {
-    padding: 4rem 3rem;
+  padding: 1rem 5rem;
+  @media (max-width: 700px) {
+    padding: 1rem 3rem;
   }
-  @media (max-width: 400px) {
-    padding: 4rem 2rem;
+  @media (max-width: 600px) {
+    padding: 1rem 2rem;
+    width: 99%;
+  }
+  @media (max-width: 600px) {
+    padding: 1rem 0.5rem;
+    width: 99%;
   }
   display: flex;
   flex-direction: column;
