--- a/src/components/HistoryItem/HistoryItem.module.scss
+++ b/src/components/HistoryItem/HistoryItem.module.scss
@@ -16,35 +16,57 @@
   color: white;
   text-shadow: 1px 1px 1px black;
   transition: all 0.3s;
-  & > div {
-    margin: .3rem 0;
-  }
   &:hover {
     box-shadow: 3px 3px 1px rgba(0, 0, 0, .3);
     transform: translate(-2px, -2px);
   }
-
-  .id {
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    font-size: .5em;
+  & > div {
+    margin: .3rem 0;
+    flex: 1;
   }
-
-  .date {
-    font-size: .7em;
-  }
-
-  .score {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: $color-light4;
-
-    img {
-      margin-right: 5px;
-      width: 25px;
-      height: 25px;
+  @media (max-width: 600px) {
+    & > div {
+      flex: none;
     }
+    .title {
+      width: 100%;
+    }
+  }
+}
+
+.title {
+  word-wrap: anywhere;
+}
+
+.id {
+  position: absolute;
+  top: 0;
+  left: 10px;
+  font-size: .5em;
+  opacity: .3;
+}
+
+.nickname {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: .5em;
+  opacity: .3;
+}
+
+.date {
+  font-size: .7em;
+  text-align: end;
+}
+
+.score {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color-light4;
+  img {
+    margin-right: 5px;
+    width: 25px;
+    height: 25px;
   }
 }
