--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -1,6 +1,8 @@
 @import "src/styles/colors";
 .item {
   height: 230px;
+  width: 370px;
+  min-width: 370px;
   border-top: 2px solid $color-dark2-up;
   border-left: 2px solid $color-dark2-up;
   border-right: 4px inset $color-dark2-down;
@@ -11,11 +13,18 @@
   justify-content: space-between;
   flex-direction: column;
   padding: 1rem;
+  margin: 1rem;
   color: white;
+  flex: 1;
+  
+  @media (max-width: 450px) {
+    min-width: 300px;
+    margin: 1rem 0;
+  }
 
   &:hover {
     box-shadow: 3px 3px 1px rgba(0, 0, 0, .3);
-    transform: translate(-2px, -2px);
+    transform: translate(-2px, -2px) !important;
   }
 }
 
@@ -80,4 +89,5 @@
   font-size: 14px;
   font-weight: normal;
   letter-spacing: 1px;
+  overflow-wrap: anywhere;
 }
