--- a/src/styles/button_light.scss
+++ b/src/styles/button_light.scss
@@ -1,7 +1,7 @@
 @import "colors";
 .button_light {
-  position: absolute;
-  margin: 1rem 1rem;
+  //position: absolute;
+  //margin: 1rem 1rem 1rem 0;
   padding: .2rem 1rem;
   display: flex;
   justify-content: center;
@@ -9,29 +9,32 @@
   transition-duration: 0.1s;
   user-select: none;
   cursor: pointer;
-  @media (max-width: 500px) {
-    font-size: .5rem;
+  text-shadow: 1px 1px 1px black;
+  text-align: center;
+  img {
+    width: 15px!important;
   }
-
+  @media (max-width: 500px) {
+    font-size: .7rem;
+  }
   text-transform: uppercase;
   color: $color-light2;
-  transform: translate(-1px, -2px);
   background-color: $color-light3;
   border-top: 2px solid $color-light3-up;
   border-left: 2px solid $color-light3-up;
   border-right: 3px inset $color-light3-down;
   border-bottom: 3px inset $color-light3-down;
-  box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.4);
   &:hover {
-    box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.7);
+    box-shadow: 4px 5px 1px rgba(0, 0, 0, 0.6);
+    transform: translate(-1px, -2px);
   }
-
   &:active {
     border-top: 2px solid $color-light3-up;
     border-left: 2px solid $color-light3-up;
     border-right: 3px inset $color-light3-down;
     border-bottom: 3px inset $color-light3-down;
-    transform: translate(0,0);
-    box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+    transform: translate(1px, 1px);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.6);
   }
 }
